--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "swagger-codegen": "^0.1.1",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "dotenv": "^16.0.3"
   }
 }
